--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </div>
             </div>
         </div>
-    </div><hr>
+    </div>
 
     <div class="color1">
         <div class="relative1">
